<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.group.etoko.Fragment.Profile.ui.ProfileFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"

    android:padding="@dimen/_14sdp"

    >

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:src="@drawable/ic_person_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/edit_profile__user_name"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toTopOf="@id/user_icon"
        app:layout_constraintBottom_toBottomOf="@+id/user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/user_icon"
        app:layout_constraintVertical_bias="0.428"
        android:layout_marginRight="@dimen/_8sdp" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"

        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        android:ems="10"
        android:hint="@string/edit_profile__user_name"
        android:background="@drawable/layout_border"
        android:textColor="@color/greyish_brown"
        android:textSize="@dimen/_14sdp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />


    <ImageView
        android:id="@+id/iv_envelop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingTop="3dp"
        android:src="@drawable/ic_email_black"
        app:layout_constraintStart_toStartOf="@+id/user_icon"
        app:layout_constraintTop_toBottomOf="@+id/edit_username" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:paddingTop="-3dp"
        android:text="@string/edit_profile__email"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_envelop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_envelop"
        app:layout_constraintTop_toTopOf="@+id/iv_envelop" />
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"

        android:paddingBottom="8dp"
        android:ems="10"

        android:hint="@string/edit_profile__email"
        android:background="@drawable/layout_border"
        android:textColor="@color/greyish_brown"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"

        >

    </EditText>

    <ImageView
        android:id="@+id/iv_telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingTop="@dimen/_3sdp"
        app:layout_constraintStart_toStartOf="@+id/iv_envelop"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        android:src="@drawable/ic_phone_black" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/edit_profile__phone"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_telephone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toTopOf="@+id/iv_telephone"
        android:layout_marginRight="8dp" />
    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:hint="@string/edit_profile__phone"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_14sdp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        android:inputType="none"
        android:focusable="false"
        android:background="@drawable/layout_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone"
        android:layout_marginRight="8dp" />
    <ImageView
        android:id="@+id/iv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingTop="@dimen/_3sdp"
        app:layout_constraintStart_toStartOf="@+id/iv_telephone"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone"
        android:src="@drawable/ic_home_black" />
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/edit_profile__address"
        android:textSize="@dimen/_14sdp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_phone"
        app:layout_constraintTop_toTopOf="@+id/iv_address"
        app:layout_constraintBottom_toBottomOf="@id/iv_address"
        android:layout_marginRight="8dp" />
    <EditText
        android:id="@+id/edit_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
         android:gravity="start"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_14sdp"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="8dp"
        android:hint="@string/edit_profile__address"
        android:background="@drawable/layout_border"
        android:ems="10"
        android:lines="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_address"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/btn_update_profile"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/edit_profile__save"
        android:textSize="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_80sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_address" />





</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>