<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_off"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/white"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingBottom="@dimen/_5sdp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/order_id_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="Order 20325563525565"
                    android:textColor="#4b4b4b"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintHorizontal_bias="0.7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/order_placed_time_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_5"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="Order 2032556"
                    android:textColor="@color/white_off2"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/order_id_tv"

                    />

                <TextView
                    android:id="@+id/order_status_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:text="pending"
                    android:textColor="@color/white_off2"
                    android:textSize="14sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".6" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/order_products_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/white"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"

                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cost_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/white"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingBottom="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/order_products_rv">

                <TextView
                    android:id="@+id/sub_total_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_5"
                    android:gravity="center_vertical"
                    android:text="@string/sub_total"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sub_total_value_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    app:layout_constraintBottom_toBottomOf="@+id/sub_total_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/sub_total_tv" />

                <TextView
                    android:id="@+id/discount_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_5"
                    android:gravity="center_vertical"
                    android:text="@string/discount"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sub_total_tv" />

                <TextView
                    android:id="@+id/discount_value_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/discount_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/discount_tv" />

                <TextView
                    android:id="@+id/delivery_charge_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_5"
                    android:gravity="center_vertical"
                    android:text="@string/delivery_cost"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/discount_tv" />

                <TextView
                    android:id="@+id/delivery_charge_value_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    app:layout_constraintBottom_toBottomOf="@+id/delivery_charge_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/delivery_charge_tv" />
                <TextView
                    android:id="@+id/additional_shipping_cost_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_5"
                    android:gravity="center_vertical"
                    android:text="@string/additional_shipping_cost"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/delivery_charge_tv" />
                <TextView
                    android:id="@+id/additional_shipping_cost_value_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    app:layout_constraintBottom_toBottomOf="@+id/additional_shipping_cost_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/additional_shipping_cost_tv" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/coupon_discount_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/additional_shipping_cost_tv"
                    >
                    <TextView
                        android:id="@+id/coupon_discount_tv"
                        style="@style/OrderHistoryStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/coupon_txt"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/coupon_discount_value_tv"
                        style="@style/OrderHistoryStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0"
                        app:layout_constraintBottom_toBottomOf="@+id/coupon_discount_tv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/coupon_discount_tv" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/referral_used_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/coupon_discount_layout"
                    >
                    <TextView
                        android:id="@+id/referral_used_tv"
                        style="@style/OrderHistoryStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_5"
                        android:gravity="center_vertical"
                        android:text="@string/referralused_orderH_txt"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/referral_used_value_tv"
                        style="@style/OrderHistoryStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.0"
                        app:layout_constraintBottom_toBottomOf="@+id/referral_used_tv"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/referral_used_tv" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/product_tax_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_5"
                    android:gravity="center_vertical"
                    android:text="@string/tax"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/referral_used_layout" />

                <TextView
                    android:id="@+id/product_tax_value_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    app:layout_constraintBottom_toBottomOf="@+id/product_tax_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/product_tax_tv" />

                <TextView
                    android:id="@+id/total_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_5"
                    android:text="@string/total"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_tax_tv" />

                <TextView
                    android:id="@+id/total_value_tv"
                    style="@style/OrderHistoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="@+id/total_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/total_tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>